--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.ColnagoStore</groupId>
-    <artifactId>Colnago_Store</artifactId>
+    <artifactId>zoo</artifactId>
     <version>1</version>
     <packaging>war</packaging>
-    <name>Colnago_Store</name>
+    <name>Zoologico</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
