--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.ColnagoStore</groupId>
+    <groupId>com.zoo</groupId>
     <artifactId>zoo</artifactId>
     <version>1</version>
     <packaging>war</packaging>
